Another small change

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1> Hello World! It's me ;)</h1>
+<h3> Hello World! How are you?</h3>
 </body>
 </html>
